@@ -134,7 +134,8 @@ the OPLS/AA force field.
 
 """
 
-__all__ = ['Timeseries', 'Universe', 'as_Universe', 'Writer', 'collection']
+__all__ = ['Timeseries', 'Universe', 'as_Universe', 'Writer', 'collection',
+           'fetch_mmtf']
 
 import logging
 import warnings
@@ -179,6 +180,9 @@ from . import units
 from .core import Timeseries
 from .core.universe import Universe, as_Universe, Merge
 from .coordinates.core import writer as Writer
+
+# After Universe import
+from ._fetch_mmtf import fetch_mmtf
 
 collection = Timeseries.TimeseriesCollection()
 import weakref
